lab/minio/route-console.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: minio
    app.kubernetes.io/managed-by: Helm
    chart: minio-5.4.0
    heritage: Helm
    release: obs-minio
  name: obs-minio-console
  namespace: minio
spec:
  port:
    targetPort: 9001
  tls:
    termination: edge
  to:
    kind: Service
    name: obs-minio-console
